<resources>
    <string name="app_name">HNotes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error">Error occurred</string>
    <string name="permission_needed">Please give permission to upload photos</string>
    <string name="loading">Loading...</string>
    <string name="add_new_ones">Add new ones</string>
    <string name="login">Login</string>
    <string name="take_photo">Take photo</string>
    <string name="browse">Browse</string>
    <string name="history">History</string>
    <string name="documents">Documents</string>

    <string name="facebook_app_id">179425919281323</string>
    <string name="fb_login_protocol_scheme">fb179425919281323</string>
    <string name="use_facebook">Use Facebook</string>
    <string name="use_google">Use Google</string>
    <string name="sign_in_with">Sign in with...</string>
    <string name="log_out_alert_sub">You sure you want to terminate your sync?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sync_your_data">Sync your data...</string>
    <string name="with_facebook">with Facebook</string>
    <string name="submit">Submit</string>

</resources>
