<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log out"
            android:textColor="@color/textColor"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/log_out_alert_sub"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_blue_btn_bg"
            android:padding="12dp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:padding="@dimen/normal_margin"
            android:text="@string/no"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>
